yamls/0-OIDC/0-oidc-secret.yml
apiVersion: v1
kind: Namespace
metadata:
  name: oidc
