yamls/0-OIDC/1-oidc.yml
# psql -W keycloak -U buildspace
# apiVersion: v1
# kind: Namespace
# metadata:
#   name: oidc
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-oidc
  namespace: oidc
spec:
  ports:
    - port: 5432
      name: postgres
  selector:
    app: postgres-oidc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-oidc
  namespace: oidc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-oidc
  template:
    metadata:
      labels:
        app: postgres-oidc
    spec:
      containers:
        - name: postgres-oidc
          image: postgres:12-alpine
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - name: postgres-oidc-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-oidc-data
          persistentVolumeClaim:
            claimName: oidc-postgres
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: oidc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycoak
          image:  jboss/keycloak
          args: ["-Dkeycloak.profile.feature.scripts=enabled","-Dkeycloak.profile.feature.upload_scripts=enabled", "-Dkeycloak.import=/realms/buildspace-realm.json"]
          ports:
            - name: http
              containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: oidc
spec:
  ports:
    - port: 8080
      protocol: TCP
      name: https
      nodePort: 30105
      targetPort: 8080
  selector:
    app: keycloak
  type: NodePort
---
