yamls/0-OIDC/2-account-manager.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-manager-api
  namespace: oidc
  labels:
    app: account-manager-api
spec:
  replicas: 1
  template:
    metadata:
      name: account-manager-api
      labels:
        app: account-manager-api
    spec:
      containers:
        - name: account-manager-api
          image: isotiropoulos/account-manager-api
          ports:
            - containerPort: 5000
      restartPolicy: Always
  selector:
    matchLabels:
      app: account-manager-api
---
kind: Service
apiVersion: v1
metadata:
  name: account-manager-api
  namespace: oidc
spec:
  selector:
    app: account-manager-api
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5001
---
